# app-menu-window-title

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  extension.js  metadata.json  prefs.js
locale/: gnome-shell-extensions-app-menu-window-title.pot
locale/ru/LC_MESSAGES/: gnome-shell-extensions-app-menu-window-title.mo  gnome-shell-extensions-app-menu-window-title.po
po/: LINGUAS  gnome-shell-extensions-app-menu-window-title.pot  he.po  ru.po
schemas/: Makefile.am  Makefile.in  gschemas.compiled  org.gnome.shell.extensions.app-menu-window-title.gschema.xml
src/: Makefile.am  Makefile.in  extension.js  metadata.json  prefs.js
